# game-of-ur

./: .gitignore  README.md  game-of-ur.cabal  stack.yaml
src/Game/: Ur.hs
tests/: Test.hs
tests/Test/Game/: Ur.hs
