name:                game-of-ur
version:             0.3.0
synopsis:            The royal game of ur
-- description:
homepage:            https://github.com/taksuyu/game-of-ur
license:             BSD3
license-file:        LICENSE
author:              Michael Borden
maintainer:          michael@quiet.space
copyright:           2017 Michael Borden
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
    default-language:    Haskell2010
    ghc-options:         -Wall
    build-depends:       base
                       , containers
                       , random
    hs-source-dirs:      src
    exposed-modules:     Game.Ur
    
test-suite ur-test
    default-language:    Haskell2010
    ghc-options:         -Wall -threaded
    build-depends:       base
                       , game-of-ur
                       , hedgehog
                       , containers
    type:                exitcode-stdio-1.0
    hs-source-dirs:      tests
    main-is:             Test.hs
    other-modules:       Test.Game.Ur